<resources>
    <string name="app_name">SmartUmbrella</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">SMART UMBRELLA</string>
    <string name="signin">Sign-in</string>
    <string name="signup">Sign-up</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Account">Account</string>
    <string name="weatherTitle">Weather Update</string>
    <string name="enterCityName">Enter City Name</string>
    <string name="enterCountryCOde">Enter Country Code (Optional)</string>
    <string name="get">Get</string>
    <string name="change_language">Change Language</string>
    <string name="help_amp_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="settings">Settings</string>
    <string name="locations">Locations</string>
    <string name="weather">Weather</string>
    <string name="tracker" translatable="false">Tracker</string>
    <string name="umbrella">Umbrella</string>
    <string name="fingerprint">Fingerprint</string>
    <string name="drop">Drop</string>
    <string name="shell" translatable="false">Shell</string>
    <string name="submit">Submit</string>
    <string name="confirm_delete">Confirm Delete</string>
    <string name="r_u_sure">Are you sure ?</string>
    <string name="delete_account">Delete account</string>
    <string name="trackUmbrella">Track my umbrella</string>

</resources>